<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill">Bill</string>
    <string name="default_amount">0.00</string>
    <string name="default_tip_percent">15</string>
    <string name="tip_percent">Tip %</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="maximum_percent">100</string>
</resources>